Add log regex and css update

--- a/Public/cadastro.html
+++ b/Public/cadastro.html
@@ -5,16 +5,16 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./Assets/Css/reset.css">
-    <link rel="stylesheet" href="./Assets/Css/style.css">
+    <link rel="stylesheet" href="./Assets/Css/cadastro.css">
     <link rel="shortcut icon" href="./Assets/Images/Favicon/favicon.ico">
     <title>Cadastro</title>
 </head>
 
 <body>
-    <aside>
+    <!-- <aside>
         <img src="./Assets/Images/winter diagon alley.jpg" alt="Snow cover Diagon Alley.jpg"> 
-    </aside>
-
+    </aside> -->
+<div class="container">
     <main>
         <form class="box"  id="formulario">
             <h2>CRIAR CONTA</h2>
@@ -42,6 +42,7 @@
             <a href="./index.html">Já poussui conta?</a>
         </form>
     </main>
+</div>
 
     <script src="./Assets/Js/cadastro.js"></script>
 </body>
