--- a/Public/index.html
+++ b/Public/index.html
@@ -5,15 +5,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./Assets/Css/reset.css">
-    <link rel="stylesheet" href="./Assets/Css/style.css">
+    <link rel="stylesheet" href="./Assets/Css/index.css">
     <link rel="shortcut icon" href="./Assets/Images/Favicon/favicon.ico">
     <title>Login</title>
 </head>
 
 <body>
-    <aside>
-        <img src="./Assets/Images/castle.jpg" alt="Hogwarts Castle.jpg">
-    </aside>
+<div class="container">
 
     <main>
         <form class="box">
@@ -36,6 +34,7 @@
             <a href="./cadastro.html">Não possui conta?</a>
         </form>
     </main>
+</div>
 
     <script src="./Assets/Js/index.js"></script>
 </body>
