Add Dumbledore's alert on password focus

--- a/Public/cadastro.html
+++ b/Public/cadastro.html
@@ -11,6 +11,10 @@
 </head>
 
 <body>
+    <aside id="passwordImage">
+        <img src="./Assets/Images/Dumbledore_pass.png" alt="Dumbledore.png">
+    </aside>
+
 <div class="container">
     <main>
         <form class="box"  id="formulario">
