--- a/Public/index.html
+++ b/Public/index.html
@@ -14,7 +14,7 @@
 <div class="container">
     <main>
         <form class="box">
-            <h2>ENTRAR NO SISTEMA DE RECADOS</h2>
+            <h2>ENTRAR NO SISTEMA DE RECADO CORUJA</h2>
 
             <div class="input-wrapper">
                 <input type="email" id="email" class="form-control" placeholder="E-mail" name="email" value="">
