Added personalized alerts and confirms

--- a/Public/index.html
+++ b/Public/index.html
@@ -35,6 +35,10 @@
     </main>
 </div>
 
+<div class="alertbox">
+    <img class="alertImg" id="doloresAlert" src="./Assets/Images/Dolores.png" alt="Dolores.png">
+</div>
+
     <script src="./Assets/Js/index.js"></script>
 </body>
 </html>
