--- a/Public/recados.html
+++ b/Public/recados.html
@@ -71,6 +71,16 @@
     </div>
 </div>
 
+<div class="alertbox">
+    <img class="alertImg" id="hagridAlert" src="./Assets/Images/Hagrid.png" alt="Hagrid.png">
+</div>
+
+<div id="dobbyBox">
+    <img id="dobbyAlert" src="./Assets/Images/Dobby.png" alt="Doby.png">
+    <Button id="confirmDobby">Confirmar</Button>
+    <button id="cancelDobby">Cancelar</button>
+</div>
+
 <script src="./Assets/Js/recados.js"></script>
 </body>
 </html>
