Responsivity, Js uptadet to Ts, bootstrap add

--- a/Public/cadastro.html
+++ b/Public/cadastro.html
@@ -71,6 +71,6 @@
         <img class="alertImg" id="lunaAlert" src="./Assets/Images/Luna.png" alt="Luna.png">
     </div>
 </div>
-    <script src="./Assets/Js/cadastro.js"></script>
+    <script src="./Assets/js/cadastro.js"></script>
 </body>
 </html>
