--- a/Public/index.html
+++ b/Public/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="./Assets/Css/reset.css">
     <link rel="stylesheet" href="./Assets/Css/index.css">
     <link rel="shortcut icon" href="./Assets/Images/Favicon/favicon.ico">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
     <title>Login</title>
 </head>
 
@@ -27,7 +28,7 @@
             </div>
 
             <div>
-                <input type="button" id="logar" value="ENTRAR">
+                <input type="button" id="logar" class="btn btn-light" value="ENTRAR">
             </div>
 
             <a href="./cadastro.html">Não possui conta?</a>
@@ -39,6 +40,6 @@
     <img class="alertImg" id="doloresAlert" src="./Assets/Images/Dolores.png" alt="Dolores.png">
 </div>
 
-    <script src="./Assets/Js/index.js"></script>
+    <script src="./Assets/js/index.js"></script>
 </body>
 </html>
