--- a/Public/recados.html
+++ b/Public/recados.html
@@ -11,9 +11,10 @@
 </head>
 
 <body>
-<div class="container">
+<div>
     <h1>Meus Recados:</h1>
 
+<div id="container">
     <form>
         <h3>Adicionar novo recado:</h3>
         <div class="flex w-full">
@@ -26,19 +27,19 @@
                 <input type="text" id="descricao" class="form-control" placeholder="Descrição" name="descricao" value="">
                 <label class="control-label" for="descricao">Descrição</label>
             </div>
+            <input type="button" value="Salvar" id="salvarBtn">
         </div>
-        <input type="button" value="Salvar" id="salvarBtn">
+        
     </form>
 
 
     <div class="w-full flex" id="tabela">
         <table  class=" w-full">
-            <thead>
+            <thead id="tHead">
                 <tr id="linha1">
                     <td>#</td>
                     <td>Tarefa</td>
                     <td>Descrição</td>
-                    <td>Ação</td>
                 </tr>
             </thead>
 
@@ -47,7 +48,7 @@
         </table>
     </div>
 
-    <input type="button" id="logoutBtn" value="Logout">
+    <input type="button" id="logoutBtn" class="btn btn-dark" value="Logout">
 
     <div id="modal">
         <div id="modalEdit">
@@ -55,12 +56,14 @@
                 <h3>Editar recado:</h3>
                 <div class="flex w-full">
                     <div class="input-wrapper">
-                        <input type="text" id="editTarefa" class="form-control" placeholder="Tarefa" name="tarefa" value="">
+                        <p>Tarefa</p>
+                        <input type="text" id="editTarefa" class="form-control2" placeholder="Tarefa" name="tarefa" value="">
                         <label class="control-label" for="tarefa">Tarefa</label>
                     </div>
             
                     <div class="input-wrapper">
-                        <input type="text" id="editDescricao" class="form-control" placeholder="Descrição" name="descricao" value="">
+                        <p>Descrição</p>
+                        <input type="text" id="editDescricao" class="form-control2" placeholder="Descrição" name="descricao" value="">
                         <label class="control-label" for="descricao">Descrição</label>
                     </div>
                 </div>
@@ -69,6 +72,7 @@
             </form>
         </div>
     </div>
+</div>
 </div>
 
 <div class="alertbox">
@@ -81,6 +85,6 @@
     <button id="cancelDobby">Cancelar</button>
 </div>
 
-<script src="./Assets/Js/recados.js"></script>
+<script src="./Assets/js/recados.js"></script>
 </body>
 </html>
