Dobby Button  bug fixed, new responsive features

--- a/Public/cadastro.html
+++ b/Public/cadastro.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="./Assets/Css/reset.css">
     <link rel="stylesheet" href="./Assets/Css/cadastro.css">
     <link rel="shortcut icon" href="./Assets/Images/Favicon/favicon.ico">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
     <title>Cadastro</title>
 </head>
 
@@ -33,7 +34,7 @@
             </div> 
 
             <div>
-                <input type="button" id="criarAcc" value="CRIAR CONTA">
+                <input type="button" id="criarAcc" class="btn btn-outline-light " value="CRIAR CONTA">
             </div>
             <a href="./index.html">Já poussui conta?</a>
         </form>
