--- a/Public/index.html
+++ b/Public/index.html
@@ -28,7 +28,7 @@
             </div>
 
             <div>
-                <input type="button" id="logar" class="btn btn-light" value="ENTRAR">
+                <input type="button" id="logar" class="btn btn-outline-light" value="ENTRAR">
             </div>
 
             <a href="./cadastro.html">Não possui conta?</a>
