--- a/Public/logout.html
+++ b/Public/logout.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./Assets/Css/reset.css">
+    <link rel="stylesheet" href="./Assets/Css/logout.css">
     <link rel="shortcut icon" href="./Assets/Images/Favicon/favicon.ico">
     <title>Logout</title>
 
@@ -16,7 +17,7 @@
 </head>
 
 <body>
-        <div>
+        <div id="videoBox">
             <video autoplay muted src="./Assets/Videos/Jacobite_Steam_Train.mp4"></video>
         </div>
 
