--- a/Public/recados.html
+++ b/Public/recados.html
@@ -12,11 +12,11 @@
 
 <body>
 <div>
-    <h1>Meus Recados:</h1>
+    <h1>Tarefas de Hogwarts:</h1>
 
 <div id="container">
     <form>
-        <h3>Adicionar novo recado:</h3>
+        <h3>Adicionar nova tarefa:</h3>
         <div class="flex w-full">
             <div class="input-wrapper">
                 <input type="text" id="tarefa" class="form-control" placeholder="Tarefa" name="tarefa" value="">
@@ -28,25 +28,26 @@
                 <label class="control-label" for="descricao">Descrição</label>
             </div>
             <input type="button" value="Salvar" id="salvarBtn">
-        </div>
-        
+        </div>   
     </form>
 
 
-    <div class="w-full flex" id="tabela">
-        <table  class=" w-full">
-            <thead id="tHead">
-                <tr id="linha1">
-                    <td>#</td>
-                    <td>Tarefa</td>
-                    <td>Descrição</td>
-                </tr>
-            </thead>
 
-            <tbody id="tabelaRecados">
-            </tbody>
-        </table>
-    </div>
+<div class="flex" id="tabela">
+    <table  class=" w-full">
+        <thead id="tHead">
+            <tr id="linha1">
+                <td>#</td>
+                <td>Tarefa</td>
+                <td>Descrição</td>
+                <td>Ações</td>
+            </tr>
+        </thead>
+
+        <tbody id="tabelaRecados">
+        </tbody>
+    </table>
+</div>
 
     <input type="button" id="logoutBtn" class="btn btn-dark" value="Logout">
 
